--- a/configs/cifar10_un_pretrain.yml
+++ b/configs/cifar10_un_pretrain.yml
@@ -15,15 +15,15 @@ zc_dim: 10
 fc_dim: 128
 
 # the weight of znloss and zcloss
-beta_1: 0.25
-beta_2: 0.5
+beta_1: 10
+beta_2: 5
 
 # train and save step 
 critic    : 3
 save_step : 50
-chain_step: 100
+chain_step: 0
 test_step : 10
-max_step  : 250
+max_step  : 300
 
 # which loss is choosed
 loss_metric: 'hinge'
@@ -32,7 +32,7 @@ loss_metric: 'hinge'
 temp_C: 0.07
 
 # train mode
-few_labels: True
+few_labels: False
 pretrain: True
 meta: False
 use_ema: False
@@ -41,16 +41,17 @@ use_ema: False
 r_batch_size: 100
 
 # which gpu is choosed
-gpu_id: 4
+gpu_id: 0
+
 
 # adjust_lr
 adjust_lr: True
 
 # Pre-train model load paths
-load_path: './cifar10_data/meta'
+load_path: './cifar10_data/unsupervised'
 
 # few-label paths
-few_labels_path: ./cifar10_data/500_real_images.pt
+few_labels_path: './cifar10_data/500_real_images.pt'
 
 # Dataset name:
-dataset_name: 'CIFAR10'
+dataset_name: 'cifar10'
