--- a/configs/coil20_un_pretrain.yml
+++ b/configs/coil20_un_pretrain.yml
@@ -15,13 +15,13 @@ zc_dim: 20
 fc_dim: 128
 
 # the weight of znloss and zcloss
-beta_1: 150
+beta_1: 100
 beta_2: 0.0005
 
 # train and save step 
 critic    : 1
 save_step : 100
-chain_step: 0
+chain_step: 1500
 test_step : 50
 max_step  : 4500
 
@@ -32,7 +32,19 @@ loss_metric: 'wgan-gp'
 temp_C: 0.07
 
 # choose train mode
-pretrain: False
+pretrain: True
 
 # which gpu is choosed
-gpu_id: 2
+gpu_id: 0
+
+# adjust_lr
+adjust_lr: False
+
+# Pre-train model load paths
+load_path: './coil20_data/'
+
+# few-label paths
+few_labels_path: '.'
+
+# Dataset name:
+dataset: 'coil20'
